# 42-ML-AI-Bootcamp

./: LICENSE  Los_Sentimientos.ipynb  README.md
module_00/: README.md
module_00/ex00/: answers.txt
module_00/ex01/: exec.py
module_00/ex02/: whois.py
module_00/ex03/: count.py
module_00/ex04/: operations.py
module_00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
module_00/ex06/: recipe.py
module_00/ex07/: filterwords.py
module_00/ex08/: sos.py
module_00/ex09/: guess.py
module_00/ex10/: loading.py
module_01/ex03/: generator.py
module_01/ex04/: eval.py
module_02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py  test.py
module_02/ex01/: main.py
module_02/ex02/: logger.py
module_02/ex03/: csvreader.py  good.csv  info.csv  test.py
module_02/ex04/: README.md  build.sh  pyproject.toml
module_02/ex04/src/my_minipack/: logger.py
module_03/ex00/: NumPyCreator.py
module_03/ex01/: ImageProcessor.py
module_03/ex02/: ScrapBooker.py
module_03/ex03/: ColorFilter.py
module_03/ex04/: Kmeans.py  code.csv  test.py
module_final/: Los_Sentimientos.ipynb
