[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[metadata]
name = "my-minipack"
version = "1.0.0"
authors = [
  { name="Yorgo Petsas", email="yzisis-p@studen.42barcelona.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yorgopetsas/smy-minipack"
